# DesktopUI

./: .fpm  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  zerotier-ui.0.1.0-1.amd64.deb  zerotier-ui.desktop
.cargo/: config.toml
.github/workflows/: build_linux.yml
libui-ng/unix/: text.c  uipriv_unix.h
libui-ng/windows/: entry.cpp  image.cpp  init.cpp
mac-app-template/ZeroTier.app/Contents/: Info.plist
mac-app-template/ZeroTier.app/Contents/Resources/: dark.css  light.css
pkg/AppImage/: AppImage.sh
pkg/git/: PKGBUILD
src/: about.rs  auth_notice.rs  join.rs  libui.rs  main.rs  serviceclient.rs  tray.rs
src/libui/: mod.rs
tray/: Makefile  tray.h  zt_desktop_tray.c
ui/: .babelrc  index.html  package-lock.json  package.json
ui/src/: about.jsx  configpanel.jsx  eui_theme_dark.css  eui_theme_light.css  index.html  index.js  index.jsx  join.jsx  main.jsx  network.jsx  networklist.jsx
ui/src/themes/zerotier/: dark.scss  light.scss
vendor-fixed/tao/: .cargo-checksum.json  Cargo.toml
vendor-fixed/tao/src/platform_impl/windows/: window.rs
web-view/: Cargo.toml
web-view/webview-sys/: Cargo.toml  build.rs  webview_cocoa.c  webview_edge.cpp
