[package]
name = "zerotier_desktop_ui"
version = "1.8.2"
authors = ["Adam Ierymenko <adam.ierymenko@zerotier.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
ureq = { version = "^2", features = [] }
single-instance = "^0"
chrono = "^0"
parking_lot = "^0"
notify-rust = "^4"
crc64 = "^1"
runas = "^0"
wry = "0.12.2"
#wry = { git = "https://github.com/tauri-apps/wry", rev = "c4156697850d619948c13ad5260b9d7bb453df46" }

[target.'cfg(target_os = "macos")'.dependencies]
plist = "^1"
web-view = { path = "web-view", features = [] }

[target.'cfg(windows)'.dependencies]
winreg = "^0"
