[package]
name = "zerotier_desktop_ui"
version = "1.10.0"
authors = ["Adam Ierymenko <adam.ierymenko@zerotier.com>"]
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
ureq = { version = "^2", features = [] }
chrono = "^0"
parking_lot = "^0"
notify-rust = "^4"
crc64 = "^1"
runas = "^0"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "^1"

[target.'cfg(windows)'.dependencies]
winreg = "^0"
winapi = { version = "^0", features = ["wincodec", "commoncontrols"] }

[target.'cfg(not(windows))'.dependencies]
libc = "^0"
