[package]
name = "zerotier_desktop_ui"
version = "1.10.0"
authors = ["Adam Ierymenko <adam.ierymenko@zerotier.com>"]
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
ureq = { version = "2.6.2", features = [] }
chrono = "^0"
parking_lot = "^0"
crc64 = "^1"
runas = "^1"
webbrowser = "^0"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "^1"
mac-notification-sys = { git = "https://github.com/h4llow3En/mac-notification-sys", rev = "65573f44bd5a3e4710b90617eb9056826a04e9c0" }

[target.'cfg(not(target_os = "macos"))'.dependencies]
notify-rust = "^4"

[target.'cfg(windows)'.dependencies]
winreg = "^0"
winapi = { version = "^0", features = ["wincodec", "commoncontrols"] }

[target.'cfg(not(windows))'.dependencies]
libc = "^0"
