[package]
name = "webview-sys"
version = "0.6.2"
authors = ["Boscop", "zxey <r.hozak@seznam.cz>"]
license = "MIT"
repository = "https://github.com/Boscop/web-view"
description = "Rust native ffi bindings for webview"
keywords = ["web", "gui", "desktop", "electron", "webkit"]
categories = ["gui", "web-programming", "api-bindings", "rendering", "visualization"]
build = "build.rs"
links = "webview"
edition = "2018"
exclude = ["Cargo.lock"]

[lib]
name = "webview_sys"
path = "lib.rs"

[features]
edge = []

[target.'cfg(all(target_family = "unix", not(target_os = "macos")))'.dependencies]
javascriptcore-rs-sys = "^0"
gtk-sys = "^0"
glib-sys = "^0"
gobject-sys = "^0"
webkit2gtk-sys = { version = "^0", features = ["v2_8"] }
gdk-sys = "^0"
gio-sys = "^0"
libc = "^0"

[build-dependencies]
cc = "1"
pkg-config = "0.3"
